--- a/src/css/style.css
+++ b/src/css/style.css
@@ -28,8 +28,26 @@ body {
     height: 100%;
 }
 
-#begin-game {
+#begin-two-player {
 	width: 200px;
+	background-color: #645a7e;
+	border-radius: 8px;
+    color: #fff;
+	padding: 25px;
+	position: absolute;
+	left: 0;
+	right: 0;
+	margin: 0 auto;
+	top: 325px;
+	z-index: 200;
+	cursor: pointer;
+	border: none;
+    font-family: 'Wendy One', sans-serif;
+    font-size: 25px;
+}
+
+#begin-single-player {
+    width: 200px;
 	background-color: #645a7e;
 	border-radius: 8px;
     color: #fff;
@@ -150,4 +168,3 @@ circle {
 	left: 0;
 	right: 0;
 }
-
